ATIV_05_JUnit_Anagrama.

--- a/TestLibrary/TestLibrary.csproj
+++ b/TestLibrary/TestLibrary.csproj
@@ -44,6 +44,8 @@
     <Compile Include="Atividade_01_Calculadora\ICalculadora.cs" />
     <Compile Include="Atividade_03_Polindromo\IPalindromo.cs" />
     <Compile Include="Atividade_03_Polindromo\Palindromo.cs" />
+    <Compile Include="Atividade_04_Anagrama\Anagrama.cs" />
+    <Compile Include="Atividade_04_Anagrama\IAnagrama.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
